third_party/move/move-compiler-v2/tests/checking/typing/index_err_2.exp

Diagnostics:
error: cannot pass `&X<integer>` to a function which expects argument of type `&vector<_>`
   ┌─ tests/checking/typing/index_err_2.move:11:17
   │
11 │         assert!(x[0].value == 2, 0);
   │                 ^^^^
